# conways-string-of-death

./: LICENSE  README.md  conways-string-of-death.cabal  stack.yaml
help/: .gitignore  ChangeLog.md  LICENSE  package.yaml
src/: Main.hs  StringOfDeath.hs
