name:                conways-string-of-death
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wolf-tickets/conways-string-of-death#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Whitefoot Smith
maintainer:          al@whitefootsmith.com
copyright:           (c) 2018 Alexander Whitefoot Smith. All rights reserved.
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable conways-string-of-death
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       StringOfDeath 
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5	
                     , mtl
                     , text
                     , Control.Concurrent
                     , Data.List.Split	
